@@ -6,6 +6,9 @@ CHANGELOG
 ** For a while this is going to ONLY INCLUDE BREAKING CHANGES.
 
 2023/09/20:
+- TestEngine: "KeepGUI" option and IM_SUSPEND_TESTFUNC()/SuspendTestFunc() sets OS mouse
+  cursor to TestEngine mouse cursor, allowing user to more easily understand the failing state.
+  (require IMGUI_VERSION_NUM >= 18992).
 - TestEngine: Renamed io.ConfigTakeFocusBackAfterTests to io.ConfigRestoreFocusAfterTests
   and fixed to restore previous focus instead of always focus Test Engine UI window.
 
